# webremote

./: .gitignore  Cargo.toml  README.md  build.rs  dune  dune-project  flake.nix  jsconfig.json  nix_notes  package.nix  webremote.nix  webremote.opam
dune.lock/: directories.pkg  lock.dune  logs.pkg  yojson-five.pkg
lib/: apps.ml  apps.mli  audio.ml  audio.mli  dune  function_description.ml  keyboard.ml  keyboard.mli  templates.ml  templates.mli  type_description.ml  webremote.ml  windowManager.ml  windowManager.mli
lib/mpris/: dune  function_description.ml  mpris.ml  mpris.mli  type_description.ml
lib/pages/: index.ml  index.mli
lib/pulseaudio/: audio.ml  dune  type_description.ml
lib/templates/: common.ml  controlButtons.ml  controlButtons.mli  controlButtons_intf.ml  modal.ml  modal.mli  modal_intf.ml  templates.ml  templates.mli
nix/: package.nix  service.nix  test.nix  webremote.nix  yojson-five.nix
public/: htmx.ts  index.css  index.js  index.ts  jslicense.html  manifest.json  service-worker.js  slider.css  swapper.ts  vars.css
server/lib/: dune  keyboard.ml
src/: apps.rs  async_utils.rs  command_line.rs  index.rs  keyboard.rs  main.rs  messages.rs  processes.rs  pulse.rs  pulse.rs.bak  webserver.rs  wm.rs
src/pages/: dialogs.rs  index.rs  mod.rs
src/templates/: control_buttons.rs  mod.rs  modal.rs
test/: a.out  dune  test.c
