[package]
name = "webremote"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
confy = "2.0.0"
maud = { version = "0.27.0", features = ["axum"] }
mime = "0.3.17"
serde = { version = "1.0.228", features = ["derive"] }
shell-words = "1.1.1"
swayipc = "4.0.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
# evdev = "0.13.2"
